<resources>
    <string name="app_name">My Todo List</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="intro_description_text">Streamline your project management with our user-friendly app. Assign tasks, set priorities, and track progress all in one place. Get organized and optimize your productivity today!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_toolbar">SIGN UP</string>
    <string name="enter_your_details_to_sign_up">Enter your details to sign up.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_details_to_sign_in">Enter your details to sign in.</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_wait">Please wait...</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign out</string>
    <string name="phone">Phone</string>
    <string name="board_name">Board Name</string>
    <string name="create_board">Create new board</string>
    <string name="create_board_">Create Board</string>
    <string name="no_boards_available_please_create_a_board">NO boards available. Please create a board.</string>
    <string name="eneter_list_name">Eneter list name</string>
    <string name="title">Title</string>
    <string name="add_card">Add Card</string>
    <string name="add_list">Add list</string>
    <string name="member">Member</string>
    <string name="add_member">Add member</string>
    <string name="search_member">Search Member</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="due_date">Due Date</string>
    <string name="select_date">Select Date</string>
    <string name="update_card">Update Card</string>
    <string name="card_name">Card Name</string>
    <string name="select_members">Select members</string>
    <string name="update_board">UPDATE BOARD</string>
    <string name="members_assigned_to_card">Members assigned to card</string>
    <string name="update_profile">Update Profile</string>
    <string name="checklist">Checklist</string>
    <string name="offline_info">"You are offline, some features may not work properly!!!"</string>
    <string name="sign_out_alert">Are you sure you want to sign out?</string>
    <string name="select_member">Select member</string>
    <string name="default_notification_channel_id">Hello World!!!\n</string>
    <string name="add_new_attachment">Add new attachment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>