<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_white_border_radius"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/card_adapter_inner_padding">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_inner_padding"
                android:text="@string/search_member"
                android:textColor="@color/text_color"
                android:textSize="@dimen/heading_3"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_dividing_margin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_search_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/paragraph_1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/card_inner_padding"
                    android:text="@string/add"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/paragraph_1" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/card_inner_padding"
                    android:text="@string/cancel"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/paragraph_1" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>